[package]
name = "ryuk-lispmacros"
version = "0.1.0"
authors = ["Kyle Edwards <kyleedwardsny@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"
ryuk-lispcore = { path = "../lispcore", features = ["macros"] }
ryuk-lispparser = { path = "../lispparser" }
syn = "1.0.107"
